Update IPython Notebook

--- a/Portal Crawler.ipynb
+++ b/Portal Crawler.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "code_folding": [
      4
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -79,13 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "code_folding": [
      0,
      24,
      30,
-     46
+     39,
+     55
     ],
     "collapsed": true
    },
@@ -118,6 +119,15 @@
     "def LoginInvalid():\n",
     "    userID = \"s1000000\"\n",
     "    Password = \"-\"\n",
+    "    global Key\n",
+    "    Key = Login(userID, Password)\n",
+    "\n",
+    "def LoginTomy():\n",
+    "    import json\n",
+    "    File = open(\"../Ω - Sensitive Datas/Portal.json\")\n",
+    "    Info = json.load(File)\n",
+    "    userID = Info[\"UserID\"]\n",
+    "    Password = Info[\"Password\"]\n",
     "    global Key\n",
     "    Key = Login(userID, Password)\n",
     "\n",
@@ -190,7 +200,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -199,21 +227,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User ID:asdasdas\n",
-      "Password:asdasd\n"
+      "User ID:\n",
+      "Password:\n"
      ]
     },
     {
-     "ename": "LoginError",
-     "evalue": "Login Failed！登入失敗！",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mLoginError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-1fcfb89f3a9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0muserID\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"User ID:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mPassword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Password:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mKey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLogin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muserID\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPassword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mKey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-83bb7316230f>\u001b[0m in \u001b[0;36mLogin\u001b[0;34m(userID, Password)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mLoginPage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLoginLink\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mLoginForm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mHead\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m\"Login Failed！登入失敗！\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mLoginPage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mLoginError\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"Login Failed！登入失敗！\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0mLoginSoup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbs4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBeautifulSoup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLoginPage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"lxml\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mSt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLoginPage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheaders\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Set-Cookie\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ASP.NET_SessionId\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mLoginError\u001b[0m: Login Failed！登入失敗！"
-     ]
+     "data": {
+      "text/plain": [
+       "'yph5d3i01j20a3vkzcybaavu'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -232,16 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'gtmccs5kxlopnnbch2dytpal'"
+       "'e031tcjwte3tebvejlaecozd'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
