--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -1,18 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import Portal\n",
-    "import getpass"
+    "# Import Library"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from YZU.user import User"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Login"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -29,10 +42,19 @@
     }
    ],
    "source": [
-    "user_id = input(\"User ID: \")\n",
-    "password = getpass.getpass(\"Password: \")\n",
-    "Tomy = Portal.UserInfo(user_id, password)\n",
+    "# Implicit-Login\n",
+    "Tomy = User()\n",
+    "\n",
+    "# Or Explicit-Login with\n",
+    "# Tomy = User(\"s1061519\", \"········\")\n",
     "print(Tomy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fetch Classes"
    ]
   },
   {
@@ -130,6 +152,13 @@
    "source": [
     "classList = Tomy.get_classes(include_teacher=True, include_codes=True)\n",
     "classList.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fetch Homework of class"
    ]
   },
   {
@@ -299,13 +328,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "# Join/Leave Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Initialze First\n",
+    "Tomy.init_class_select_agent()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Join Class\n",
+    "Tomy.join_class_via_Dept(\"CS222\", \"A\", \"304\", 2) # course_code, class_code, time, dept_code, degree\n",
+    "Tomy.leave_class(\"EL227\", \"H2\")"
+   ]
   }
  ],
  "metadata": {
@@ -324,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
